# tokimo-app-person

./: Cargo.toml  tokimo-app.toml
.github/workflows/: ci.yml
migrations/: 20260521000001__create_items_table.up.sql  20260521_000001__create_items_table.up.sql  20260618000001__create_person_tables.up.sql
src/: app_server.rs  cli.rs  error.rs  handlers.rs  lib.rs  main.rs  state.rs
src/bus_clients/: app_events.rs  jobs.rs  mod.rs
src/bus_services/: person.rs
src/db/: mod.rs
src/db/entities/: image_face_cache.rs  items.rs  mod.rs  person_faces.rs  person_media.rs  persons.rs
src/db/repos/: face_cache_repo.rs  items_repo.rs  mod.rs  person_repo.rs
src/handlers/: mod.rs
src/queue/: mod.rs  person_delete_source.rs  person_register_faces.rs
src/services/: mod.rs  person_events.rs
tests/: export_bindings.rs
ui/: package.json  pnpm-lock.yaml
ui/src/: index.tsx  viewer-demo.tsx
ui/src/api/: client.ts
ui/src/components/: MatchFacePanel.tsx  PersonDebugPanel.tsx  PersonDetail.tsx  PersonList.tsx  RegisterFacesPanel.tsx
ui/src/demos/: BasicDemos.tsx  ItemsCrudDemo.tsx  JobsDemos.tsx  MediaDemos.tsx  shared.tsx
ui/src/i18n/: index.ts
ui/src/lib/: sourcePreview.ts
