[package]
name        = "tokimo-app-person"
version     = "0.1.0"
edition     = "2024"
rust-version = "1.94.0"
license     = "MIT OR Apache-2.0"
description = "Person — 中心化人物身份服务，跨 app 人脸匹配与人物管理"
repository  = "https://github.com/tokimo-lab/tokimo-app-person"

[lib]
name = "tokimo_app_person"
path = "src/lib.rs"

[[bin]]
name = "tokimo-app-person"
path = "src/main.rs"

[dependencies]
tokimo-bus-client   = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "5322dc286809a5bb79953b512334b0a8a63e33f2" }
tokimo-bus-protocol = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "5322dc286809a5bb79953b512334b0a8a63e33f2", features = ["axum"] }
tokimo-bus-auth     = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "5322dc286809a5bb79953b512334b0a8a63e33f2", features = ["axum", "cli-db"] }
tokimo-bus-cli      = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "5322dc286809a5bb79953b512334b0a8a63e33f2" }

clap              = { version = "4", features = ["derive", "env"] }
tokio              = { version = "1", features = ["full"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
uuid               = { version = "1", features = ["v4", "serde"] }
chrono             = { version = "0.4", features = ["serde"] }
sea-orm            = { version = "2.0.0-rc.38", default-features = false, features = ["sqlx-postgres", "runtime-tokio-rustls", "with-uuid", "with-chrono", "with-json", "macros"] }
rust-embed         = { version = "8", features = ["debug-embed"] }
mime_guess         = "2"
anyhow             = "1"
axum = { version = "0.8", features = ["json"] }
ts-rs = { version = "12", features = ["serde-json-impl"] }
